Fixed the title color thing.  It was just a stupid mistake on my part.  If any of you guys have suggestions for colors in case these aren't visible enough, I'd welcome it.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -19,6 +19,6 @@ a tr:nth-child(odd) {
 a tr:nth-child(even) {
   color: #636363;
 }
-table th h4 {
+table th h3 {
   color: #636363;
 }
